@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kuleuven.esat</groupId>
-    <artifactId>bayesLearn</artifactId>
-    <version>1.1</version>
-    <name>Bayes Learn</name>
+    <groupId>io.github.mandar2812</groupId>
+    <artifactId>dynaml</artifactId>
+    <version>1.2-SNAPSHOT</version>
+    <name>DynaML</name>
     <description>Scala Library/REPL for working with Bayesian graphical models.</description>
     <url>http://mandar2812.github.io/bayeslearn/</url>
     <parent>
@@ -35,7 +35,6 @@
     <properties>
         <scala.version>2.10.4</scala.version>
     </properties>
-
     <repositories>
         <repository>
             <id>scala-tools.org</id>
@@ -43,7 +42,6 @@
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
             <id>scala-tools.org</id>
@@ -51,7 +49,6 @@
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
     </pluginRepositories>
-
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -91,30 +88,20 @@
             <version>2.6.0</version>
         </dependency>
         <dependency>
-            <groupId>com.michaelpollmeier</groupId>
-            <artifactId>gremlin-scala</artifactId>
-            <version>2.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tinkerpop.blueprints</groupId>
-            <artifactId>blueprints-neo4j2-graph</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.tinkerpop</groupId>
             <artifactId>frames</artifactId>
             <version>2.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
-            <version>2.1.7</version>
         </dependency>
         <dependency>
             <groupId>org.scalanlp</groupId>
             <artifactId>breeze_2.10</artifactId> <!-- or 2.11 -->
             <version>0.10</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.scalanlp</groupId>
+            <artifactId>breeze-natives_2.10</artifactId>
+            <version>0.10</version>
+        </dependency>-->
         <dependency>
             <groupId>com.github.tototoshi</groupId>
             <artifactId>scala-csv_2.10</artifactId>
@@ -132,7 +119,7 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
+            <artifactId>scalatest_2.10</artifactId>
             <version>2.2.1</version>
              <scope>test</scope>
         </dependency>
@@ -151,6 +138,16 @@
             <artifactId>scala-pickling_2.10</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.10</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
@@ -163,7 +160,7 @@
             </activation>
             <build>
                 <plugins>
-                    <plugin>
+                    <!--<plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <executions>
@@ -175,7 +172,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin>-->
                 </plugins>
             </build>
         </profile>
@@ -246,7 +243,22 @@
                 </execution>
               </executions>
             </plugin>
-
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
@@ -257,15 +269,17 @@
                         <goals><goal>assemble</goal></goals>
                         <phase>package</phase>
                         <configuration>
-                            <!--<extraJvmArguments>-Xmx1600m</extraJvmArguments>-->
+                            <extraJvmArguments>-XX:+UseG1GC</extraJvmArguments>
+                            <extraJvmArguments>-Xmx5g</extraJvmArguments>
+                            <extraJvmArguments>-XX:MaxPermSize=1g</extraJvmArguments>
                             <extraJvmArguments>
                                 -Dlog4j.configuration=file://${basedir}/conf/log4j.properties
                             </extraJvmArguments>
                             <repositoryLayout>flat</repositoryLayout>
                             <programs>
                                 <program>
-                                    <name>bayesLearn-repl</name>
-                                    <mainClass>org.kuleuven.esat.bayesLearn</mainClass>
+                                    <name>DynaML</name>
+                                    <mainClass>io.github.mandar2812.dynaml.DynaML</mainClass>
                                 </program>
                             </programs>
                             <assembleDirectory>${project.build.directory}</assembleDirectory>
